--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                     dom: 'Bfrtip',
                     buttons: ['copy', 'csv', 'excel', 'pdf', 'print'],
                     responsive: true,
-columnDefs: [
+                    columnDefs: [
                         {
                             targets: [3, 4, 5], // 「建物倒壊危険度」「火災危険度」「総合危険度」列のインデックス
                             createdCell: function (td, cellData) {
@@ -180,6 +180,13 @@ columnDefs: [
                                 } else if (landType === '谷底低地3') {
                                     $(td).addClass('land-type-tani3');
                                 }
+                            }
+                        },
+                        {
+                            targets: 7, // 路線のインデックス（0始まりなので9列目なら8）
+                            createdCell: function (td, cellData) {
+                                const lines = cellData.split(' ');
+                                td.innerHTML = lines.map(line => `<span class="line-${line}">${line}</span>`).join(' ');
                             }
                         }
                     ],
